[package]
name = "quart_ai_enemy"
version = "0.1.0"
authors = ["Anton Hermann <antonoehler@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quart_lib = { path = "../quart_lib" }
log = "0.4.8"
flexi_logger = "0.14.8"
rand = "0.7.3"
